Stars. Table z-index fix

--- a/less/pages.less
+++ b/less/pages.less
@@ -183,6 +183,8 @@
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(119, 119, 119, 0.5);
 
+  z-index: 2;
+  
   &__form .button{
     margin-top: 15px;
   }
