--- a/less/scaffold.less
+++ b/less/scaffold.less
@@ -23,5 +23,5 @@
 }
 
 .back {
-  z-index: -1;
+  z-index: 1;
 }
